--- a/index.html
+++ b/index.html
@@ -51,23 +51,94 @@
                     <img src="img/img1.png" class="img-fluid col-3">
                     <p class="h6">...</p>
                 </div>
-                <p class="h4">Воронов Артём Андреевич</p>
+                <p class="h4">Павлов Никита Сергеевич</p>
                 <div class="about d-flex">
                     <img src="img/img1.png" class="img-fluid col-3">
                     <p class="h6">...</p>
                 </div>
-                <p class="h4">Воронов Артём Андреевич</p>
+                <p class="h4">Ковальчук Александр Витальевич</p>
                 <div class="about d-flex">
                     <img src="img/img1.png" class="img-fluid col-3">
                     <p class="h6">...</p>
                 </div>
             </div>
             <div class="container" id="Product">
-
+                <p class="h3">Продукция</p>
+                <p class="text-center h5">Наша продукция:
+                    <br>-  решает проблему «слепой зоны». Конвертер «НИКА – С» даёт возможность слышать, когда к тебе обращаются, даже если человек находится сзади и говорит негромко;
+                    <br>- позволяет украшать слуховой аппарат, придавая новый облик.
+                </p>
+                <p class="text-primary h4">Откройте для себя уникальность, почувствуйте удобство и функциональность устройства «НИКА – С» </p>
+                <div class="card" style="width: 16rem;">
+                    <img src="./img/img1.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Конвертор НИКА-С</h5>
+                        <p class="card-text">- Преобразовывает речь в текст
+                            <br>- Позволяет получать виброотклик на своё имя
+                            <br>- Управление через мобильное приложение
+                            <br>- Возможность использования независимо от пола и возраста
+                        </p>
+                        <p class="card-footer">9 900,00 р.</p>
+                        <a onclick="Buy()" class="btn btn-primary">Заказать</a>
+                    </div>
+                </div>
+                <p class="text-primary h4">Откройте для себя преимущества наших кафф — украшений, которые обязательно станут неотъемлемой частью вашего стиля</p>
+                <p class="text-center h5">которые обязательно станут неотъемлемой частью вашего стиля
+                    <br>- Будьте в тренде! Мы постоянно следим за последними модными тенденциями, чтобы предложить вам самые актуальные коллекции украшений, которые подчеркнут вашу индивидуальность и стиль.
+                    <br>- Наши каффы не имеют конкурентов на рынке, что делает их уникальными и востребованными среди ценителей красоты и элегантности.
+                    <br>- Высокое качество по доступной цене! Наслаждайтесь стильными украшениями без переплаты
+                    <br>- Подчеркните свою индивидуальность и следуйте модным тенденциям с нашими каффами уже сегодня!
+                </p>
+                <div class="container">
+                    <div class="card bob" style="width: 16rem;">
+                        <img src="./img/img1.png" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Кафы</h5>
+                            <p class="card-text">Описание каф
+                            </p>
+                            <p class="card-footer">900,00 р.</p>
+                            <a onclick="Buy()" class="btn btn-primary">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="card bob" style="width: 16rem;">
+                        <img src="./img/img1.png" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Кафы</h5>
+                            <p class="card-text">Описание каф
+                            </p>
+                            <p class="card-footer">700,00 р.</p>
+                            <a onclick="Buy()" class="btn btn-primary">Заказать</a>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 16rem;">
+                        <img src="./img/img1.png" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Кафы</h5>
+                            <p class="card-text">Описание каф
+                            </p>
+                            <p class="card-footer">500,00 р.</p>
+                            <a onclick="Buy()" class="btn btn-primary">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="container" id="Contact">
+                <p class="h3">Контакты</p>
+                <iframe class="float-start" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2164.9058957442003!2d65.58744637686775!3d57.138670873628506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43bbe1312fd610eb%3A0x3042668a66473a3a!2z0YPQuy4g0K3QvdC10YDQs9C10YLQuNC60L7QsiwgNDUsINCi0Y7QvNC10L3RjCwg0KLRjtC80LXQvdGB0LrQsNGPINC-0LHQuy4sINCg0L7RgdGB0LjRjywgNjI1MDEz!5e0!3m2!1sru!2sus!4v1715081434822!5m2!1sru!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p class="h5">Адрес:<br>
+                    г. Тюмень, ул. Энергетиков, д 45<br><br>
+                    Часы работы:<br>
+                    пн-пт: 9:00-18:30<br>
+                    сб: 10:00-15:00, вс: выходной.<br><br>
+                    Телефон:<br>
+                    8-960-000-00-00
+                </p>
             </div>
         </div>
     </div>
 
     <script src="./js/bootstrap.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
