An almost ready-made shit site

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <source src="video.mp4"/>
             </video>
             <div class="container ">
-                <img src="./img/img1.png" class="img-fluid float-end col-xl-4 col-md-5 col-sm-6 col-8" >
+                <img src="./img/NIKA-C.png" class="img-fluid float-end col-xl-4 col-md-5 col-sm-6 col-8" >
                 <p class="col-xl-8 col-md-6 col-lg-12 ">В мире неумолимо растет число слабослышащих и тотально неслышащих людей. Более 360 миллионов человек страдают глухотой или нарушением слуха. По данным ВОЗ нарушения слуха — одна из самых распространенных патологий здоровья во всем мире. Как следует из публикуемого сегодня Всемирной организацией здравоохранения (ВОЗ) первого Всемирного доклада по проблемам слуха, к 2050 г. почти 2,5 миллиарда человек во всем мире – т.е. каждый четвертый – будут страдать той или иной степенью потери слуха. Слуховые аппараты улучшают качество жизни 90% людей с проблемами слуха, но все ли хотят, чтобы окружающие знали их особенность? </p>
                 <div class="container"><p>Мы сами студенты и не понаслышке знаем, что наши обучающиеся не всегда слышат преподавателя, особенно, если педагог находится за спиной, и это большая проблема.  Именно поэтому мы разработали уникальное устройство - конвертер «НИКА – С» (приемник, объединяющий предусилитель сигнала и преобразователь речи в текст), чтобы облегчить жизнь людей с нарушением слуха.<br>
                     Мы также постарались сделать и сами слуховые аппараты особенными, чтобы каждый мог наслаждаться полноценным звуком.<br>
@@ -49,17 +49,17 @@
                 <p class="h4">Воронов Артём Андреевич</p>
                 <div class="about d-flex">
                     <img src="img/img1.png" class="img-fluid col-3">
-                    <p class="h6">...</p>
+                    <p class="h6">воплотил в жизнь идею устройства, создав его функционал и разработав простое, понятное приложение.</p>
                 </div>
                 <p class="h4">Павлов Никита Сергеевич</p>
                 <div class="about d-flex">
                     <img src="img/img1.png" class="img-fluid col-3">
-                    <p class="h6">...</p>
+                    <p class="h6">создал привлекательный визуальный стиль устройства, сайта и сопутствующих материалов.</p>
                 </div>
                 <p class="h4">Ковальчук Александр Витальевич</p>
                 <div class="about d-flex">
                     <img src="img/img1.png" class="img-fluid col-3">
-                    <p class="h6">...</p>
+                    <p class="h6">спроектировал удобный и информативный веб-сайт, служащий лицом устройства в сети.</p>
                 </div>
             </div>
             <div class="container" id="Product">
@@ -70,7 +70,7 @@
                 </p>
                 <p class="text-primary h4">Откройте для себя уникальность, почувствуйте удобство и функциональность устройства «НИКА – С» </p>
                 <div class="card" style="width: 16rem;">
-                    <img src="./img/img1.png" class="card-img-top">
+                    <img src="./img/Nika.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Конвертор НИКА-С</h5>
                         <p class="card-text">- Преобразовывает речь в текст
@@ -91,7 +91,7 @@
                 </p>
                 <div class="container">
                     <div class="card bob" style="width: 16rem;">
-                        <img src="./img/img1.png" class="card-img-top">
+                        <img src="./img/Kafa2.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
                             <p class="card-text">Описание каф
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="card bob" style="width: 16rem;">
-                        <img src="./img/img1.png" class="card-img-top">
+                        <img src="./img/Kafa1.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
                             <p class="card-text">Описание каф
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 16rem;">
-                        <img src="./img/img1.png" class="card-img-top">
+                        <img src="./img/Kafa3.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
                             <p class="card-text">Описание каф
