An almost ready-made shit site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
         <div class="container" >
-            <video class="col-12" autoplay="autoplay" controls loop>
+            <video class="col-12" controls loop>
                 <source src="video.mp4"/>
             </video>
             <div class="container ">
