--- a/index.html
+++ b/index.html
@@ -43,101 +43,86 @@
                     </p>
                 </div>
             </div>
-            <div class="container" id="About">
-                <p class="h3">О нас</p>
-                <p>Мы - команда талантливых и преданных своему делу профессионалов, стоящих за созданием уникального устройства НИКА-С.</p>
-                <p class="h4">Воронов Артём Андреевич</p>
-                <div class="about d-flex">
-                    <img src="img/img1.png" class="img-fluid col-3">
-                    <p class="h6">воплотил в жизнь идею устройства, создав его функционал и разработав простое, понятное приложение.</p>
-                </div>
-                <p class="h4">Павлов Никита Сергеевич</p>
-                <div class="about d-flex">
-                    <img src="img/img1.png" class="img-fluid col-3">
-                    <p class="h6">создал привлекательный визуальный стиль устройства, сайта и сопутствующих материалов.</p>
-                </div>
-                <p class="h4">Ковальчук Александр Витальевич</p>
-                <div class="about d-flex">
-                    <img src="img/img1.png" class="img-fluid col-3">
-                    <p class="h6">спроектировал удобный и информативный веб-сайт, служащий лицом устройства в сети.</p>
-                </div>
-            </div>
+            <p class="h3">Продукция</p>
             <div class="container" id="Product">
-                <p class="h3">Продукция</p>
-                <p class="text-center h5">Наша продукция:
-                    <br>-  решает проблему «слепой зоны». Конвертер «НИКА – С» даёт возможность слышать, когда к тебе обращаются, даже если человек находится сзади и говорит негромко;
-                    <br>- позволяет украшать слуховой аппарат, придавая новый облик.
-                </p>
-                <p class="text-primary h4">Откройте для себя уникальность, почувствуйте удобство и функциональность устройства «НИКА – С» </p>
-                <div class="card" style="width: 16rem;">
+                <div class="card bob" style="width: 16rem;">
                     <img src="./img/Nika.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Конвертор НИКА-С</h5>
-                        <p class="card-text">- Преобразовывает речь в текст
-                            <br>- Позволяет получать виброотклик на своё имя
-                            <br>- Управление через мобильное приложение
-                            <br>- Возможность использования независимо от пола и возраста
-                        </p>
                         <p class="card-footer">9 900,00 р.</p>
-                        <a href="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</a>
+                        <a href="#FuckingStupedForm" class="btn btn-primary Openform">Подробнее</a>
                     </div>
                 </div>
-                <p class="text-primary h4">Откройте для себя преимущества наших кафф — украшений, которые обязательно станут неотъемлемой частью вашего стиля</p>
-                <p class="text-center h5">которые обязательно станут неотъемлемой частью вашего стиля
-                    <br>- Будьте в тренде! Мы постоянно следим за последними модными тенденциями, чтобы предложить вам самые актуальные коллекции украшений, которые подчеркнут вашу индивидуальность и стиль.
-                    <br>- Наши каффы не имеют конкурентов на рынке, что делает их уникальными и востребованными среди ценителей красоты и элегантности.
-                    <br>- Высокое качество по доступной цене! Наслаждайтесь стильными украшениями без переплаты
-                    <br>- Подчеркните свою индивидуальность и следуйте модным тенденциям с нашими каффами уже сегодня!
-                </p>
-                <div class="container">
                     <div class="card bob" style="width: 16rem;">
                         <img src="./img/Kafa2.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
-                            <p class="card-text">Описание каф
-                            </p>
                             <p class="card-footer">900,00 р.</p>
-                            <a href="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</a>
+                            <a href="#FuckingStupedForm" class="btn btn-primary Openform">Подробнее</a>
                         </div>
                     </div>
                     <div class="card bob" style="width: 16rem;">
                         <img src="./img/Kafa1.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
-                            <p class="card-text">Описание каф
-                            </p>
                             <p class="card-footer">700,00 р.</p>
-                            <a href="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</a>
+                            <a href="#FuckingStupedForm" class="btn btn-primary Openform">Подробнее</a>
                         </div>
                     </div>
-                    <div class="card" style="width: 16rem;">
+                    <div class="card bob" style="width: 16rem;">
                         <img src="./img/Kafa3.png" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
-                            <p class="card-text">Описание каф
-                            </p>
                             <p class="card-footer">500,00 р.</p>
-                            <a href="#FuckingStupedForm" class="btn btn-primary">Заказать</a>
+                            <a href="#FuckingStupedForm" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+            </div><div class="containier col-12 bg-white">dfgdhhdh</div>
+            <p class="h3">Часто задаваемые вопросы</p>
+            <div class="container" id="Qvest">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Как сделать заказ?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Да.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Есть ли у вас самовывоз?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Очень инторесная и полезная информация по данному вопросу, который мучает пользователей, имеющих желание и возможность прийти а собственным заказом.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Возврат или обмен
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Очень интерес в своём содержании текст
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <br>
-            <div class="container" id="Contact">
-                <p class="h3">Контакты</p>
-                <iframe class="float-start" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2164.9058957442003!2d65.58744637686775!3d57.138670873628506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43bbe1312fd610eb%3A0x3042668a66473a3a!2z0YPQuy4g0K3QvdC10YDQs9C10YLQuNC60L7QsiwgNDUsINCi0Y7QvNC10L3RjCwg0KLRjtC80LXQvdGB0LrQsNGPINC-0LHQuy4sINCg0L7RgdGB0LjRjywgNjI1MDEz!5e0!3m2!1sru!2sus!4v1715081434822!5m2!1sru!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p class="h5">Адрес:<br>
-                    г. Тюмень, ул. Энергетиков, д 45<br><br>
-                    Часы работы:<br>
-                    пн-пт: 9:00-18:30<br>
-                    сб: 10:00-15:00, вс: выходной.<br><br>
-                    Телефон:<br>
-                    8-960-000-00-00
-                </p>
-            </div>
             <div class="container" id="FuckingStupedForm" >
                 <form class="container py-3" >
-                    <button type="button" class="btn btn-link closeButton">Link</button>
+                    <button type="button" class="btn btn-link closeButton"></button>
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="name" class="form-label">Ваши ФИО*</label>
