Пивозавр не доволен!!:=(

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="align-content-center justify-content-center col-12"><h3>Слышать - это красиво</h3></div>
+        <div class="align-content-center justify-content-center col-12"><img src="img/Logo.jpg" class="img-fluid col-1 float-start"> <h3>Слышать - это красиво</h3></div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-">
                 <a class="navbar-brand" href="#">Навигатор</a>
@@ -22,9 +22,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="#Main">Главная</a>
-                        <a class="nav-link" href="#About">О нас</a>
                         <a class="nav-link" href="#Product">Продукция</a>
-                        <a class="nav-link" href="#Contact">Контакты</a>
+                        <a class="nav-link" href="#Qvest">Часто задоваемые вопросы</a>
                     </div>
                 </div>
             </div>
@@ -54,7 +53,7 @@
                     </div>
                 </div>
                     <div class="card bob" style="width: 16rem;">
-                        <img src="./img/Kafa2.png" class="card-img-top">
+                        <img src="./img/Kafa2(.jpg" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
                             <p class="card-footer">900,00 р.</p>
@@ -62,24 +61,24 @@
                         </div>
                     </div>
                     <div class="card bob" style="width: 16rem;">
-                        <img src="./img/Kafa1.png" class="card-img-top">
+                        <img src="./img/Ka.jpg" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
                             <p class="card-footer">700,00 р.</p>
                             <a href="#FuckingStupedForm" class="btn btn-primary Openform">Подробнее</a>
                         </div>
                     </div>
-                    <div class="card bob" style="width: 16rem;">
-                        <img src="./img/Kafa3.png" class="card-img-top">
+                    <div class="card" style="width: 16rem;">
+                        <img src="./img/Kafa;3.jpg" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Кафы</h5>
                             <p class="card-footer">500,00 р.</p>
                             <a href="#FuckingStupedForm" class="btn btn-primary">Подробнее</a>
                         </div>
                     </div>
-            </div><div class="containier col-12 bg-white">dfgdhhdh</div>
-            <p class="h3">Часто задаваемые вопросы</p>
+            </div><div class="containier col-12 bg-white"></div>
             <div class="container" id="Qvest">
+                <p class="h3">Часто задаваемые вопросы</p>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
@@ -89,7 +88,9 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Да.
+                                На странице интернет-магазина выберите понравившийся товар. Чтобы узнать о нем подробнее, кликните на одноименную кнопку — вы попадете на страницу товара с полным описанием, мы старались сделать его полезным и информативным!
+                                <br>
+                                Нажав "Купить” , вы попадете на страницу заполнения данных для оформления заказа. Заполните необходимую информацию, затем сайт предложит варианты доставки и оплаты. В поле "комментарий к заказу" можно написать нам свои пожелания по оформлению и доставке, а мы постараемся все исполнить!
                             </div>
                         </div>
                     </div>
@@ -101,7 +102,9 @@
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Очень инторесная и полезная информация по данному вопросу, который мучает пользователей, имеющих желание и возможность прийти а собственным заказом.
+                                Вы можете забрать ваш заказ в учебном заведении ТТСИиГХ, расположенным по адресу: 
+                                <br>Энергетиков 45
+                                <br>В день доставки Вам позвонит менеджер и сообщит о возможности забрать заказ
                             </div>
                         </div>
                     </div>
@@ -113,7 +116,7 @@
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                Очень интерес в своём содержании текст
+                                1. Покупатель вправе отказаться от товара в любое время до его передачи, а после передачи товара - в течение 7 (семи) дней. Указанная информация о порядке и сроках возврата товара надлежащего качества предоставлена для ознакомления в данном Договоре. Покупатель вправе обменять непродовольственный товар надлежащего качества на аналогичный товар у Продавца, если указанный товар не подошел по форме, габаритам, фасону, расцветке, размеру или комплектации. Если на момент обращения Покупателя аналогичный Товар отсутствует в продаже у Продавца, Покупатель вправе отказаться от исполнения договора купли-продажи и потребовать возврата уплаченной за указанный Товар денежной суммы.<br>2. Возврат полученного Товара надлежащего качества возможен в случае, если сохранены его товарный вид, потребительские свойства, а также (при наличии) документ, подтверждающий факт и условия покупки указанного Товара. При обнаружении следов эксплуатации Товара, Продавец оставляет за собой право отказать в возврате денежных средств по данному основанию.<br>3. Покупатель не вправе отказаться от Товара надлежащего качества, имеющего индивидуально-определенные свойства, если указанный Товар может быть использован исключительно приобретающим его Покупателем.<br>4. При отказе Покупателя от Товара Продавец возвращает ему стоимость возвращенного Товара, за исключением расходов Продавца на доставку от Покупателя возвращенного Товара, не позднее чем через 10 дней с даты получения Продавцом письменного заявления Покупателя. Заявление признается поданным в надлежащей форме, если оно составлено в письменном виде с собственноручной подписью Покупателя. Заявление Покупателя на возврат передается одновременно с Товаром, от которого Покупатель отказывается.<br>5. Возврат Товара надлежащего качества может осуществляться силами Покупателя, по устному соглашению между Продавцом и Покупателем. В случае выполнение действий по возврату Товара силами Продавца, Покупатель осознает возможность значительного увеличения транспортных расходов, подлежащих отнесению на счет Покупателя в соответствии с п. <br>5.4 Оферты.<br>6. Возврат Товара ненадлежащего качества осуществляется в порядке, предусмотренном действующим законодательством.<br>7. Покупатель может возвратить Товар ненадлежащего качества изготовителю или Продавцу и потребовать возврата уплаченной денежной суммы в течение гарантийного срока, срока годности либо, если такой срок не установлен, в разумный срок. Покупатель также может потребовать замены Товара ненадлежащего качества либо устранения недостатков в случае, если данные недостатки возникли по вине Продавца.<br>8. В случае отказа Покупателя от договора и предъявления требования о возврате уплаченной за Товар денежной суммы, стоимость Товара подлежит возврату Покупателю в течение 10 дней с момента получения Продавцом письменного заявления Покупателя. Заявление признается поданным в надлежащей форме, если оно составлено в письменном виде с собственноручной подписью Покупателя. Заявление Покупателя на возврат передается одновременно с Товаром, от которого Покупатель отказывается. Товар должен быть передан вместе с оригиналами гарантийного талона и заключения сервисного центра (при наличии).<br>9. Возврат денежных средств осуществляется Продавцом одним из следующих способов:<br>а) наличными денежными средствами по месту нахождения Продавца – только в случае оплаты наличными денежными средствами;<br>б) на банковский счёт, с которой производилась оплата – в случае оплаты безналичным расчётом.
                             </div>
                         </div>
                     </div>
